--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 
     <!-- App Manifest & Icons -->
   <link rel="manifest" href="/manifest.webmanifest" />
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png" />
+  <link rel="icon" href="/prism.png" type="image/png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/prism.png" />
 
     <!-- Structured Data -->
     <script type="application/ld+json">
